test_case/rust-lang_rust/31380_197986263.rs
 rust
// Should get errors for both 'Some' and 'None'
use std::option::Option::{Some, None}; //~ ERROR unused import
//~^ ERROR unused import
